<resources>
    <string name="app_name">Daltonismo</string>
    <string name="que_numero_voc_v_na_imagem_abaixo">Que numero você vê na imagem abaixo ?</string>
    <string name="ok">OK</string>
    <string name="button">Button</string>
    <string name="digite">Digite</string>
    <string name="o_que">O Que é?</string>
    <string name="daltonismo_tamb_m_conhecido_como_discromatopsia_ou_discromopsia_uma_perturba_o_da_percep_o_visual_caracterizada_pela_incapacidade_de_diferenciar_todas_ou_algumas_cores_manifestando_se_muitas_vezes_pela_dificuldade_em_distinguir_o_verde_do_vermelho">
        Daltonismo, também conhecido como discromatopsia ou discromopsia, é uma perturbação da percepção visual
        caracterizada pela incapacidade de diferenciar todas ou algumas cores, manifestando-se muitas vezes pela
        dificuldade em distinguir o verde do vermelho.
    </string>
    <string name="fa_a_o_teste">Faça o Teste!</string>
    <string name="teste_1">Teste 1</string>
    <string name="teste_2">teste 2</string>
    <string name="teste_3">Teste 3</string>
    <string name="verificar">Verificar</string>
    <string name="resposta_1">Resposta 1</string>
    <string name="resposta_2">Resposta 2</string>
    <string name="resposta_3">Resposta 3</string>
    <string name="resultado_do_teste">Resultado do Teste</string>
    <string name="suas_respostas">Suas respostas</string>
    <string name="cancelar">Cancelar</string>
</resources>
