<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/o_que"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/oque" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"
    />
    <TextView
            android:text="@string/daltonismo_tamb_m_conhecido_como_discromatopsia_ou_discromopsia_uma_perturba_o_da_percep_o_visual_caracterizada_pela_incapacidade_de_diferenciar_todas_ou_algumas_cores_manifestando_se_muitas_vezes_pela_dificuldade_em_distinguir_o_verde_do_vermelho"
            android:layout_width="340dp"
            android:layout_height="81dp"
            android:id="@+id/definicao" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/oque"/>
    <TextView
            android:text="@string/fa_a_o_teste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facaTeste" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:textSize="24sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/definicao"/>
    <Button
            android:text="@string/teste_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/facaTeste"/>
    <Button
            android:text="@string/teste_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/teste1"/>
    <Button
            android:text="@string/teste_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/teste2"/>
    <Button
            android:text="@string/verificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verificar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/teste3"/>
    <TextView
            android:text="@string/resposta_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resposta1" app:layout_constraintStart_toEndOf="@+id/teste1" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.767"
            app:layout_constraintTop_toBottomOf="@+id/resposta" android:layout_marginTop="44dp"/>
    <TextView
            android:text="@string/resposta_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resposta2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/teste2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.794"
            app:layout_constraintTop_toBottomOf="@+id/resposta1" android:layout_marginTop="44dp"/>
    <TextView
            android:text="@string/resposta_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resposta3" app:layout_constraintStart_toEndOf="@+id/teste3" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.832"
            app:layout_constraintTop_toBottomOf="@+id/resposta2" android:layout_marginTop="52dp"/>
    <TextView
            android:text="@string/resultado_do_teste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/verificar"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.793"
            android:id="@+id/resultadoTeste"
            android:layout_marginBottom="44dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/suas_respostas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resposta"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.855"
            android:layout_marginTop="228dp" app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>